<resources>
    <string name="app_name">Grossary</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>0
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">+ Create Account</string>
    <string name="btn_link_to_login">Already registered</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>


    <string-array name="nav_drawer_labels">
        <item>@string/app_name</item>
        <item>@string/nav_item_history</item>
        <item>@string/action_settings</item>
        <item>@string/nav_item_about_us</item>
    </string-array>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_about_us">About Us</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_about_us">About Us</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_logout">Logout</string>
    <string name="nav__item_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="pulses">Pulses</string>
    <string name="fruits">Fruits</string>
    <string name="dairy">Dairy</string>
    <string name="cereal">Cereals</string>
    <string name="shopping_list">Shopping List</string>
    <string name="vegetables">Vegetable</string>
    <string name="dryfruits">Dry Fruits</string>
    <string name="miscellaneous">Others</string>
    <string name="cart">Cart</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="ip_addr">http://35.189.135.24</string>
    <string name="action_remove_from_cart">Empty the Cart</string>
    <string name="Rs">\u20B9</string>
</resources>
