<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">


    <android.support.v7.widget.CardView
        android:id="@+id/card_shopping_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/transparent"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        android:layout_marginTop="32dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/thumbnail_shopping_list"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="fitXY"
                android:src = "@drawable/category_cereal"/>

            <TextView
                android:id="@+id/category_shopping_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail_shopping_list"
                android:layout_centerInParent="true"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:paddingBottom="@dimen/album_title_padding"
                android:textColor="@color/album_title"
                android:textSize="@dimen/album_title"
                android:text="@string/shopping_list"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_cereal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@android:color/transparent"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:layout_alignParentLeft="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail_cereal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:src = "@drawable/category_cereal"/>

                <TextView
                    android:id="@+id/category_cereal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbnail_cereal"
                    android:layout_centerInParent="true"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:paddingTop="@dimen/album_title_padding"
                    android:paddingBottom="@dimen/album_title_padding"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title"
                    android:text="@string/cereal"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_dairy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@android:color/transparent"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:layout_alignParentRight="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail_dairy"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:src = "@drawable/category_cereal"/>

                <TextView
                    android:id="@+id/category_dairy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbnail_dairy"
                    android:layout_centerInParent="true"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:paddingTop="@dimen/album_title_padding"
                    android:paddingBottom="@dimen/album_title_padding"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title"
                    android:text="@string/dairy"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_fruits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            card_view:cardBackgroundColor="@android:color/transparent"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:layout_alignParentLeft="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail_fruits"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:src = "@drawable/category_cereal"/>

                <TextView
                    android:id="@+id/category_fruits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbnail_fruits"
                    android:layout_centerInParent="true"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:paddingTop="@dimen/album_title_padding"
                    android:paddingBottom="@dimen/album_title_padding"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title"
                    android:text="@string/fruits"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_pulses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@android:color/transparent"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:layout_alignParentRight="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail_pulses"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:src = "@drawable/category_cereal"/>

                <TextView
                    android:id="@+id/category_pulses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thumbnail_pulses"
                    android:layout_centerInParent="true"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingRight="@dimen/album_title_padding"
                    android:paddingTop="@dimen/album_title_padding"
                    android:paddingBottom="@dimen/album_title_padding"
                    android:textColor="@color/album_title"
                    android:textSize="@dimen/album_title"
                    android:text="@string/pulses"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</LinearLayout>